feat: add leftover meal analysis
